[package]
name = "embedded-mqtt"
description = "A simple MQTT client designed for use with embassy"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/siemtim-dev/embedded-mqtt"
homepage = "https://github.com/siemtim-dev/embedded-mqtt"
readme = "README.md"

license = "Apache-2.0"

[workspace]
members = [
    "embytes-buffer"
]

## Workspace wide dependencies
[workspace.dependencies]
thiserror = { version = "2.0.11", default-features = false }
heapless = "0.8.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

embassy-sync = { version = "0.6.2", default-features = false }
embassy-futures = { version = "^0.1.1", default-features = false }

defmt = { version = "0.3.10" }
tokio = { version = "1.43.0",  features = ["macros", "time", "io-util", "net"] }
tracing = { version = "0.1.41" }

embassy-time = { version = ">= 0.3.0, < 0.5.0", default-features = false }

[workspace.dependencies.mqttrs]
version = "0.4"
git = "https://github.com/00imvj00/mqttrs.git"
rev = "dd9d381b401b1b7353c43b36123f1b2ea5fa80a1"
default-features = false

[dependencies]
## From Workspace Internal 
embytes-buffer = { version = "1.0.0", path = "./embytes-buffer", default-features = false, features = ["serde", "embedded"]}

# From Workspace external
mqttrs = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
heapless = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
defmt = { workspace = true , optional = true }
tokio = { workspace = true , optional = true }
embedded-io-async = { workspace = true }
tracing = { workspace = true, optional = true }
embassy-time = { workspace = true, default-features = false, optional = true }

# External
embassy-net = { version = ">= 0.5.0, < 0.7.0", optional = true, features = ["dns", "tcp", "proto-ipv4", "proto-ipv6", "medium-ip"] }

[features]
default = [ "std" ]
embassy = [ "dep:embassy-time", "dep:embassy-net" ]
std = [ "embassy-sync/std", "dep:tokio" ]
defmt = ["dep:defmt", "embassy-sync/defmt", "embassy-time/defmt", "mqttrs/defmt", "embassy-futures/defmt", "embytes-buffer/defmt" ]
tracing = [ "std", "dep:tracing" ]
test_with_broker = [ "std" ]

[dev-dependencies]

embassy-time = { workspace = true, default-features = false, features = ["std"]}
embassy-sync = { workspace = true, default-features = false, features = ["std"]}

tokio = {workspace = true, features = ["macros", "net", "tokio-macros", "io-util", "time", "rt-multi-thread"] }
tracing = { workspace = true }

test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
ntest = "0.9.3"
rumqttc = "0.24.0"
tokio-util = "0.7.13"
dotenvy = "0.15.7"
uuid = { version = "1.15.1", features = ["v4"] }


