[package]
name = "embedded-mqttc"
description = "A simple MQTT client designed for use with embassy"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/siemtim-dev/embedded-mqtt"
homepage = "https://github.com/siemtim-dev/embedded-mqtt"
readme = "README.md"

license = "Apache-2.0"

[dependencies]

embytes-buffer = { version = "0.1.0", default-features = false, features = ["embedded"]}

mqttrs2 = { version = "0.1.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }
heapless = "0.8.0"
embassy-sync = { version = "0.6.2", default-features = false }
embassy-futures = { version = "^0.1.1", default-features = false }
defmt = { version = "0.3.10" , optional = true }
tokio = { version = "1.43.0" , optional = true, features = ["macros", "net", "tokio-macros", "io-util", "time", "rt-multi-thread"] }
embedded-io-async = { version = "0.6.1" }
tracing = { version = "0.1.41", optional = true }
embassy-time = { version = ">= 0.3.0, < 0.5.0", default-features = false, optional = true }

embassy-net = { version = ">= 0.5.0, < 0.7.0", optional = true, features = ["dns", "tcp", "proto-ipv4", "proto-ipv6", "medium-ip"] }

[features]
default = [ "std" ]
embassy = [ "dep:embassy-time", "dep:embassy-net" ]
std = [ "embassy-sync/std", "dep:tokio" ]
defmt = ["dep:defmt", "embassy-sync/defmt", "embassy-time/defmt", "embassy-net/defmt", "mqttrs2/defmt", "embassy-futures/defmt", "embytes-buffer/defmt", "embedded-io-async/defmt-03" ]
tracing = [ "std", "dep:tracing" ]
test_with_broker = [ "std" ]

[dev-dependencies]

embassy-time = { version = ">= 0.3.0, < 0.5.0", default-features = false, features = ["std"]}
embassy-sync = { version = "0.6.2", default-features = false, features = ["std"]}

tokio = {version = "1.43.0", features = ["macros", "net", "tokio-macros", "io-util", "time", "rt-multi-thread"] }
tracing = { version = "0.1.41" }

test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
ntest = "0.9.3"
rumqttc = "0.24.0"
tokio-util = "0.7.13"
dotenvy = "0.15.7"
uuid = { version = "1.15.1", features = ["v4"] }


