[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
# From workspace
buffer = { version = "*", path = "../buffer", default-features = false, features = ["serde", "embedded"]}
mqttrs = { workspace = true }
thiserror = { workspace = true }
heapless = { workspace = true }
embedded-io-async = { workspace = true }
defmt = { workspace = true , optional = true }
tracing = { workspace = true, optional = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
tokio = { workspace = true , optional = true, features = ["macros", "io-util", "net"] }

## Other
embassy-net = { version = "0.5.0", optional = true, features = ["dns", "tcp", "proto-ipv4", "proto-ipv6", "medium-ip"] }

[features]
default = [ "std", "embassy" ]
embassy = [ "dep:embassy-net" ]
std = [ "embassy-sync/std", "dep:tokio" ]
defmt = ["dep:defmt", "embassy-sync/defmt", "buffer/defmt", "embassy-net/defmt", "mqttrs/defmt"]
tracing = [ "std", "dep:tracing" ]
