[package]
name = "queue-vec"
version = "0.1.0"
edition = "2021"

[features]

std = [ "embassy-sync/std" ]

[dependencies]
embassy-sync = "^0.6.0"
heapless = "0.*"

[dev-dependencies]
embassy-sync = { version = "^0.6.0", features = ["std"] }

futures-executor = { version = "0.3.31", features = ["thread-pool"] }
futures-test = "0.3.31"
futures-util = "0.3.31"
futures-timer = "3.0.3"


