[package]
name = "queue-vec"
version = "0.1.0"
edition = "2021"

[features]
std = [ "embassy-sync/std" ]

[dependencies]
embassy-sync = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
embassy-sync = { workspace = true, features = ["std"] }

futures-executor = { version = "0.3.31", features = ["thread-pool"] }
futures-test = "0.3.31"
futures-util = "0.3.31"
futures-timer = "3.0.3"


