[package]
name = "queue-vec"
version = "0.1.0"
edition = "2021"

[features]
std = [ "embassy-sync/std" ]

[dependencies]
embassy-sync = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
embassy-sync = { workspace = true, features = ["std"] }

tokio = {workspace = true, features = ["macros", "tokio-macros", "time", "rt-multi-thread"] }


